@@ -2,6 +2,16 @@
 
 	Patch from Jani Monoses <jani@ubuntu.com>
 
+	* src/vpn-properties/clipboard.c
+	  src/vpn-properties/nm-vpn-properties.glade
+	  src/vpn-properties/nm-vpn-properties.c
+		- Use GtkAssistant instead of GnomeDruid on GTK+ >= 2.10
+		    (gnome.org #470554)
+
+2007-08-30  Dan Williams  <dcbw@redhat.com>
+
+	Patch from Jani Monoses <jani@ubuntu.com>
+
 	* src/applet.c
 		- (about_dialog_activate_link_cb): don't use gnome_url_open()
 		(gnome.org #460671)
